feat : 카페 리뷰 크롤러

--- a/cafe_review/Dockerfile
+++ b/cafe_review/Dockerfile
@@ -1,25 +1,19 @@
-FROM public.ecr.aws/lambda/python@sha256:10dbb67ede15b5fd516be87dd71c3f7968904b0b840235720486476b34ef9b67 as build
-RUN yum update -y -q
-RUN yum install -y unzip && \
-    curl -Lo "/tmp/chromedriver.zip" "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip" && \
-    curl -Lo "/tmp/chrome-linux.zip" "https://www.googleapis.com/download/storage/v1/b/chromium-browser-snapshots/o/Linux_x64%2F1135561%2Fchrome-linux.zip?alt=media" && \
-    unzip /tmp/chromedriver.zip -d /opt/ && \
-    unzip /tmp/chrome-linux.zip -d /opt/
+FROM python:3.9
 
-FROM public.ecr.aws/lambda/python@sha256:10dbb67ede15b5fd516be87dd71c3f7968904b0b840235720486476b34ef9b67
-RUN yum install atk cups-libs gtk3 libXcomposite alsa-lib \
-    libXcursor libXdamage libXext libXi libXrandr libXScrnSaver \
-    libXtst pango at-spi2-atk libXt xorg-x11-server-Xvfb \
-    xorg-x11-xauth dbus-glib dbus-glib-devel -y
+WORKDIR /usr/src
+RUN apt-get -y update
+RUN apt install wget unzip -y -q
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+RUN apt -y install ./google-chrome-stable_current_amd64.deb
 
-COPY requirements.txt /tmp/
-RUN pip install --upgrade pip -q
-RUN pip install -r /tmp/requirements.txt -q
+RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/` curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+RUN mkdir chrome
+RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/src/chrome
 
-COPY --from=build /opt/chrome-linux /opt/chrome
-COPY --from=build /opt/chromedriver /opt/
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 COPY cafe_review_crawling.py ./
 COPY cafe_list.csv ./
+RUN mkdir review
 
-RUN chmod -R 777 /var/task
-CMD ["python3", "cafe_review_crawling.py"]
+CMD [ "python", "cafe_review_crawling.py" ]
