--- a/cafe_name/requirements.txt
+++ b/cafe_name/requirements.txt
@@ -1,14 +1,18 @@
 attrs==23.1.0
+boto3==1.28.25
+botocore==1.31.25
 certifi==2023.7.22
 exceptiongroup==1.1.2
 h11==0.14.0
 idna==3.4
+jmespath==1.0.1
 numpy==1.25.2
 outcome==1.2.0
 pandas==2.0.3
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3
+s3transfer==0.6.1
 selenium==4.9.1
 six==1.16.0
 sniffio==1.3.0
@@ -16,5 +20,5 @@ sortedcontainers==2.4.0
 trio==0.22.2
 trio-websocket==0.10.3
 tzdata==2023.3
-urllib3==2.0.4
+urllib3==1.26.16
 wsproto==1.2.0
